# conquer

./: README.md  pyproject.toml  requirements.txt
app/: models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
config/: permissions.py  settings.py  urls.py
